apps/shlink/manifests/shlink/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: shlink
  name: shlink
  namespace: shlink
spec:
  replicas: 1  # TODO: To scale to more than 1 replica, redis needs to be configured
  selector:
    matchLabels:
      app.kubernetes.io/name: shlink
  template:
    metadata:
      labels:
        app.kubernetes.io/name: shlink
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - shlink
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - image: shlinkio/shlink:4.0.3
          imagePullPolicy: IfNotPresent
          name: shlink
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              cpu: 200m
              #memory: 100Mi
            requests:
              cpu: 20m
              #memory: 3Mi
      securityContext:
        runAsNonRoot: true
      restartPolicy: Always
      serviceAccountName: shlink
