apps/shlink/manifests/shlink/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/name: shlink
  name: shlink
  namespace: shlink
spec:
  ingressClassName: traefik
  rules:
    - host: link.ankhmorpork.thaum.xyz
      http:
        paths:
          - backend:
              service:
                name: shlink
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - link.ankhmorpork.thaum.xyz
      secretName: shlink-tls
